Quick Fix for easytees iron-overlay-background placing infront of modal dialog instead of behind

--- a/p4m-shared/p4m.scss
+++ b/p4m-shared/p4m.scss
@@ -1173,6 +1173,12 @@ paper-input .underline {
 	display: none !important;
 }
 
+iron-overlay-backdrop.iron-overlay-backdrop-0.opened {
+  z-index: 98 !important;
+}
+.iron-overlay-backdrop-0.opened {
+  z-index: 98 !important;
+}
 
 // Credit Card Instances
 p4m-card {
